added logistic regression and xgboost models

--- a/nlp_practice.ipynb
+++ b/nlp_practice.ipynb
@@ -1110,10 +1110,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.6760330578512397\n",
+      "CPU times: user 26.7 ms, sys: 1.9 ms, total: 28.6 ms\n",
+      "Wall time: 27.9 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "y_pred_nb = nb.predict(X_test)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred_nb, y_test))\n",
+    "#print(classification_report(y_test, y_pred,target_names = targets))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Logistic Regression Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/austinkrause/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/Users/austinkrause/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:460: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logreg = Pipeline([('vect', CountVectorizer()),\n",
+    "                ('tfidf', TfidfTransformer()),\n",
+    "                ('clf', LogisticRegression(n_jobs=1, C=1e5)),\n",
+    "               ])\n",
+    "logreg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.7735537190082644\n",
+      "CPU times: user 21.7 ms, sys: 2.27 ms, total: 24 ms\n",
+      "Wall time: 24.5 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "y_pred_lr = logreg.predict(X_test)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred_lr, y_test))\n",
+    "#print(classification_report(y_test, y_pred,target_names=targets))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=1))])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb = Pipeline([('vect', CountVectorizer()),\n",
+    "               ('tfidf', TfidfTransformer()),\n",
+    "               ('clf', XGBClassifier()),\n",
+    "              ])\n",
+    "xgb.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "\n",
+    "y_pred_ = xgb.predict(X_test)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
+    "#print(classification_report(y_test, y_pred,target_names=targets))"
+   ]
   }
  ],
  "metadata": {
