--- a/nlp_practice.ipynb
+++ b/nlp_practice.ipynb
@@ -821,12 +821,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Lable Encoding"
+    "<h2>Lable Encoding - Author"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2016 entries, 0 to 2015\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 8 columns):\n",
       "party                      2016 non-null object\n",
       "quote                      2016 non-null object\n",
       "said_by                    2016 non-null object\n",
@@ -853,8 +853,9 @@
       "quote_no_stops             2016 non-null object\n",
       "lemmatized_quote           2016 non-null object\n",
       "lemmatized_quote_string    2016 non-null object\n",
-      "dtypes: object(7)\n",
-      "memory usage: 110.3+ KB\n"
+      "author_encoded             2016 non-null int64\n",
+      "dtypes: int64(1), object(7)\n",
+      "memory usage: 126.1+ KB\n"
      ]
     }
    ],
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +874,7 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +914,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Lable Encoding - Party"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le_2 = preprocessing.LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LabelEncoder()"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit the encoder to the pandas column\n",
+    "le_2.fit(df.party)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['D', 'R']\n"
+     ]
+    }
+   ],
+   "source": [
+    "targets_2 = list(le_2.classes_)\n",
+    "print(targets_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the fitted encoder to the pandas column\n",
+    "df['party_encoded'] = le_2.transform(df.party) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -945,6 +1020,7 @@
        "      <th>lemmatized_quote</th>\n",
        "      <th>lemmatized_quote_string</th>\n",
        "      <th>author_encoded</th>\n",
+       "      <th>party_encoded</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -958,6 +1034,7 @@
        "      <td>[change, come, wait, person, wait, time, one, ...</td>\n",
        "      <td>change come wait person wait time one 've wait...</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -969,6 +1046,7 @@
        "      <td>[best, way, feel, hopeless, get, something, wa...</td>\n",
        "      <td>best way feel hopeless get something wait good...</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -980,6 +1058,7 @@
        "      <td>[change, brought, ordinary, people, extraordin...</td>\n",
        "      <td>change brought ordinary people extraordinary t...</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -991,6 +1070,7 @@
        "      <td>[yes]</td>\n",
        "      <td>yes</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1002,6 +1082,7 @@
        "      <td>[change, waiting]</td>\n",
        "      <td>change waiting</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1036,15 +1117,22 @@
        "3                                              [yes]   \n",
        "4                                  [change, waiting]   \n",
        "\n",
-       "                             lemmatized_quote_string  author_encoded  \n",
-       "0  change come wait person wait time one 've wait...               1  \n",
-       "1  best way feel hopeless get something wait good...               1  \n",
-       "2  change brought ordinary people extraordinary t...               1  \n",
-       "3                                                yes               1  \n",
-       "4                                     change waiting               1  "
+       "                             lemmatized_quote_string  author_encoded  \\\n",
+       "0  change come wait person wait time one 've wait...               1   \n",
+       "1  best way feel hopeless get something wait good...               1   \n",
+       "2  change brought ordinary people extraordinary t...               1   \n",
+       "3                                                yes               1   \n",
+       "4                                     change waiting               1   \n",
+       "\n",
+       "   party_encoded  \n",
+       "0              0  \n",
+       "1              0  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,12 +1145,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Train-Test Split"
+    "<h2>Train Test Split - Author"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,6 +1158,32 @@
     "y = df.author_encoded\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> Train Test Split - Party"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_party = df.lemmatized_quote_string\n",
+    "y_party = df.party_encoded\n",
+    "\n",
+    "X_train_party, X_test_party, y_train_party, y_test_party = train_test_split(X_party, y_party, test_size=0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Author Classification"
    ]
   },
   {
@@ -1254,17 +1368,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.7024793388429752\n",
+      "CPU times: user 37.7 ms, sys: 3.12 ms, total: 40.8 ms\n",
+      "Wall time: 47.1 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
-    "y_pred_ = xgb.predict(X_test)\n",
+    "y_pred_xgb = xgb.predict(X_test)\n",
     "\n",
-    "print('accuracy %s' % accuracy_score(y_pred, y_test))\n",
+    "print('accuracy %s' % accuracy_score(y_pred_xgb, y_test))\n",
     "#print(classification_report(y_test, y_pred,target_names=targets))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Party Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Naive Bayes Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...inear_tf=False, use_idf=True)), ('clf', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb_party = Pipeline([('vect', CountVectorizer()),\n",
+    "               ('tfidf', TfidfTransformer()),\n",
+    "               ('clf', MultinomialNB()),\n",
+    "              ])\n",
+    "nb_party.fit(X_train_party, y_train_party)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.7900826446280992\n",
+      "CPU times: user 20.8 ms, sys: 2.01 ms, total: 22.8 ms\n",
+      "Wall time: 22 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "y_pred_nb_party = nb_party.predict(X_test)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred_nb_party, y_test_party))\n",
+    "#print(classification_report(y_test, y_pred,target_names = targets))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Logistic Regression Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/austinkrause/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg_party = Pipeline([('vect', CountVectorizer()),\n",
+    "                ('tfidf', TfidfTransformer()),\n",
+    "                ('clf', LogisticRegression(n_jobs=1, C=1e5)),\n",
+    "               ])\n",
+    "logreg_party.fit(X_train_party, y_train_party)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.8644628099173554\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_lr_party = logreg_party.predict(X_test_party)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred_lr_party, y_test_party))\n",
+    "#print(classification_report(y_test, y_pred,target_names=targets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "        strip...\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=1))])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_party = Pipeline([('vect', CountVectorizer()),\n",
+    "               ('tfidf', TfidfTransformer()),\n",
+    "               ('clf', XGBClassifier()),\n",
+    "              ])\n",
+    "xgb_party.fit(X_train_party, y_train_party)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.7966942148760331\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_xgb_party = xgb_party.predict(X_test_party)\n",
+    "\n",
+    "print('accuracy %s' % accuracy_score(y_pred_xgb_party, y_test_party))\n",
+    "#print(classification_report(y_test, y_pred,target_names=targets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
