added xgboost model

--- a/nlp_practice.ipynb
+++ b/nlp_practice.ipynb
@@ -354,6 +354,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my predecessor in the senate, daniel patrick moynihan, used to say, “everyone is entitled to his own opinion, but not his own facts.'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[1506].quote"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -821,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Lable Encoding - Author"
+    "<h2>Label Encoding - Author"
    ]
   },
   {
@@ -925,7 +945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Lable Encoding - Party"
+    "<h2>Label Encoding - Party"
    ]
   },
   {
@@ -1520,6 +1540,13 @@
     "\n",
     "print('accuracy %s' % accuracy_score(y_pred_lr_party, y_test_party))\n",
     "#print(classification_report(y_test, y_pred,target_names=targets))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>XGBoost"
    ]
   },
   {
